--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ owner:
   avatar: leonids-logo.png
   job: "晴子的博客"
   bio: "愿化作火炭上一滴麦芽糖，在翻腾不休的时间里，滋滋地响"
-  email:qingli1025@gmail.com
+  email:
   disqus-shortname:
   twitter:
   facebook:
