--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -2,7 +2,7 @@
 # if you don't have language feature(language.yml is empty), ignore "i18n" items
 
 - name: 开智学堂(安人心智集团)
-  link: https://m.openmindclub.com/
+  link: https://m.openmindclub.com/mkt
   date: 2017.02 - 2018.12
   job: 课程助理（运营）
 
