--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -1,5 +1,5 @@
 - name: 信息分析-抖音为何会火？短视频背后的秘密
-  descr:"抖音可以说是今年以来最火爆的应用，是全球最快逼近1.5亿用户的APP；估值甚至逼近母公司今日头条；可以说是风头一时无二。抖音模式的成功收益与哪些内部和外部因素有关？抖音的成功又如何影响着短视频行业的爆发？同行业竞争的赛场是怎样的？本文将为你展现对抖音及短视频行业的最小全局认识。"
+  descr: "抖音模式的成功收益与哪些内部和外部因素有关？抖音的成功又如何影响着短视频行业的爆发？同行业竞争的赛场是怎样的？本文将为你展现对抖音及短视频行业的最小全局认识。"
   image: pong.png
   github: https://github.com/LexieLee/IA001BP/blob/master/IA001BPShortVideo.md
   
